# ir2-colbert-news

./: .gitignore  README.md  environment.yml  pyproject.toml  test_colbert_dims.py
baseline/: README.md  config.py  config_values.json  data_preprocess.py  dataset.py  download_and_setup_data.py  downsampling.ipynb  evaluate.py  pyproject.toml  reorganize_data.py  test_models.py  train.py  utils.py
baseline/bert/: config.py  data_preprocess.py  data_preprocess_new.py  dataset.py  download_and_setup_data.py  evaluate.py  pyproject.toml  reorganize_data.py  test_models.py  train.py  utils.py
baseline/bert-family/: config.py  data_preprocess.py  dataset.py  evaluate.py  train.py  utils.py
baseline/bert-family/model/NAMLbert/: news_encoder.py
baseline/bert/model/: base.py  factory.py
baseline/bert/model/ColBERT/: __init__.py
baseline/bert/model/NAMLbert/: __init__.py
baseline/bert/model/NRMSbert/: __init__.py  news_encoder.py  user_encoder.py
baseline/bert/model/general/attention/: additive.py
baseline/data_downsampled_20k/train/: behaviors_parsed.tsv  category2int.tsv  entity2int.tsv  user2int.tsv  word2int.tsv
baseline/glove-ft/: config.py  evaluate.py  train.py
baseline/glove-nft/: config.py  data_preprocess.py  dataset.py  evaluate.py  train.py  utils.py
baseline/glove-nft/model/LSTURlinear/: __init__.py  news_encoder.py
baseline/glove-nft/model/NAMLlinear/: __init__.py
baseline/glove-nft/model/NRMSlinear/: news_encoder.py  user_encoder.py
baseline/llama/: config.py  data_preprocess_new.py  dataset.py  evaluate.py  train.py  utils.py
baseline/llama/model/NAMLlinear/: news_encoder.py
baseline/llama/model/NRMSlinear/: __init__.py
baseline/model/: base.py  factory.py
baseline/model/ColBERT/: __init__.py
baseline/model/NRMSbert/: __init__.py  news_encoder.py  user_encoder.py
baseline/model/Random/: random_model.py
baseline/model/general/attention/: additive.py  multihead_self.py
baseline/model/general/click_predictor/: dot_product.py
baseline/roberta/: config.py  data_preprocess.py  train.py
baseline/roberta/model/LSTURbert/: news_encoder.py
baseline/roberta/model/NAMLbert/: news_encoder.py
baseline/roberta/model/NRMSbert/: news_encoder.py
job_scripts/: data_preprocessing.job  install_env.job  pipeline_baseline.job  pipeline_colbert.job  pipeline_colbert_attention.job  pipeline_colbert_hierarchical.job  pipeline_colbert_mean.job  pipeline_colbert_position.job  train_baseline.job  (+3 more)
(+42 files in other folders)
