[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ir2-colbert-news"
version = "0.1.0"
description = "News Recommendation with ColBERT and NRMS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML/Data
    "torch>=1.12.0",
    "numpy>=1.21.0",
    "pandas>=2.2.1",
    "scikit-learn>=1.0.0",
    "tqdm>=4.64.0",
    "ujson==5.10.0",
    
    # NLP/Transformers
    "transformers>=4.41.0,<=4.56.2",
    "sentence-transformers==5.1.1",
    "datasets>=2.20.0",
    "accelerate>=0.31.0",
    "nltk>=3.7",
    
    # ColBERT/PyLaTe specific
    "sqlitedict>=2.1.0",
    "ninja==1.11.1.4",
    "fastkmeans==0.5.0",
    "fast-plaid>=1.2.4.260,<=1.2.5.290",
    
    # Logging/Tracking
    "wandb>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.0.200",
    "mypy>=1.0.0",
    "typing-extensions>=4.0.0",
]

[tool.setuptools]
packages = ["baseline", "colbert.pylate"]

[tool.setuptools.package-dir]
"baseline" = "baseline"
"colbert.pylate" = "colbert/pylate"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

