[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nrms-bert-tiny"
version = "0.1.0"
description = "NRMSbert news recommendation model with BERT tiny"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.12.0",
    "transformers>=4.20.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "nltk>=3.7",
    "tqdm>=4.64.0",
    "scikit-learn>=1.0.0",
    "tensorboard>=2.9.0",
    "sentence-transformers>=2.2.0", # Required for pylate/ColBERT
    "datasets>=2.0.0", # Required for pylate/ColBERT
    "wandb>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.0.200",
    "mypy>=1.0.0",
    "typing-extensions>=4.0.0",
]

[tool.setuptools]
packages = {find = {}}

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
